[package]
name = "envconfig"
version = "0.10.0"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
description = "Build a config structure from environment variables without boilerplate."
categories = ["config", "web-programming"]
keywords = ["config", "env", "macro", "configuration", "environment"]
license = "MIT"
repository = "https://github.com/greyblake/envconfig-rs"
homepage = "https://github.com/greyblake/envconfig-rs"
documentation = "https://docs.rs/envconfig"
readme = "README.md"
edition = "2018"

[dev-dependencies]

[dependencies]
envconfig_derive = { version = "0.9.1", path = "../envconfig_derive" }
