[package]
name = "envconfig_derive"
version = "0.10.0"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
description = "Build a config structure from environment variables without boilerplate."
categories = ["config", "web-programming"]
keywords = ["config", "env", "macro", "configuration", "environment"]
license = "MIT"
repository = "https://github.com/greyblake/envconfig-rs"
readme = "README.md"
edition.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.76", features = ["parsing", "derive"] }
quote = { version = "1.0.37", features = [] }
proc-macro2 = { version = "1.0.86", features = [] }
